force-app/main/default/objects/Community_Profile__c/Community_Profile__c.object-meta.xml
<CustomObject>
    <label>Community Profile</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>Community Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>