force-app/main/default/objects/Community_Profile__c/fields/Adjacent_Desk_Included__c.field-meta.xml
<CustomField>
    <fullName>Adjacent_Desk_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adjacent Desk Included</label>
    <type>Checkbox</type>
</CustomField>