force-app/main/default/objects/Community_Profile__c/fields/BP_Active__c.field-meta.xml
<CustomField>
    <fullName>BP_Active__c</fullName>
    <formula>Builder_Specific_Profile__r.Active__c</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>