force-app/main/default/objects/Community_Profile__c/fields/BP_Adhesive__c.field-meta.xml
<CustomField>
    <fullName>BP_Adhesive__c</fullName>
    <formula>TEXT ( Builder_Specific_Profile__r.Adhesive__c )</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Adhesive</label>
    <type>Text</type>
</CustomField>