force-app/main/default/objects/Community_Profile__c/fields/BP_Adjacent_Desk_Included__c.field-meta.xml
<CustomField>
    <fullName>BP_Adjacent_Desk_Included__c</fullName>
    <formula>Builder_Specific_Profile__r.Adjacent_Desk_Included__c</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Adjacent Desk Included</label>
    <type>Checkbox</type>
</CustomField>