force-app/main/default/objects/Community_Profile__c/fields/BP_Butler_s_Pantry_Inlcuded__c.field-meta.xml
<CustomField>
    <fullName>BP_Butler_s_Pantry_Inlcuded__c</fullName>
    <formula>Builder_Specific_Profile__r.Butler_s_Pantry_Included__c</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Butler&apos;s Pantry Inlcuded</label>
    <type>Checkbox</type>
</CustomField>