force-app/main/default/objects/Community_Profile__c/fields/BP_Category__c.field-meta.xml
<CustomField>
    <fullName>BP_Category__c</fullName>
    <formula>TEXT( Builder_Specific_Profile__r.Category__c )</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Category</label>
    <type>Text</type>
</CustomField>