force-app/main/default/objects/Community_Profile__c/fields/BP_Corner_Shelf_Included__c.field-meta.xml
<CustomField>
    <fullName>BP_Corner_Shelf_Included__c</fullName>
    <formula>Builder_Specific_Profile__r.Corner_Shelf_Included__c</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Corner Shelf Included</label>
    <type>Checkbox</type>
</CustomField>