force-app/main/default/objects/Community_Profile__c/fields/BP_Cover_Floors_With__c.field-meta.xml
<CustomField>
    <fullName>BP_Cover_Floors_With__c</fullName>
    <formula>TEXT(Builder_Specific_Profile__r.Cover_Floors_With__c)</formula>
    <inlineHelpText>From the Builder Profile Line Item</inlineHelpText>
    <label>Cover Floors With</label>
    <type>Text</type>
</CustomField>