force-app/main/default/objects/Community_Profile__c/fields/BP_Height_at_Dropped_Venthood__c.field-meta.xml
<CustomField>
    <fullName>BP_Height_at_Dropped_Venthood__c</fullName>
    <formula>TEXT (Builder_Specific_Profile__r.Height_at_Dropped_Venthood__c)</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Height at Dropped Venthood</label>
    <type>Text</type>
</CustomField>