force-app/main/default/objects/Community_Profile__c/fields/BP_Height_of_Master_Walls__c.field-meta.xml
<CustomField>
    <fullName>BP_Height_of_Master_Walls__c</fullName>
    <formula>Builder_Specific_Profile__r.Height_of_Master_Walls__c</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Height of Master Walls</label>
    <type>Text</type>
</CustomField>