force-app/main/default/objects/Community_Profile__c/fields/BP_Height_of_Tub_Splash_Drop_in__c.field-meta.xml
<CustomField>
    <fullName>BP_Height_of_Tub_Splash_Drop_in__c</fullName>
    <formula>Builder_Specific_Profile__r.Height_of_Tub_Splash_Drop_in__c</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Height of Tub Splash (Drop-in)</label>
    <type>Text</type>
</CustomField>