force-app/main/default/objects/Community_Profile__c/fields/BP_Reducers__c.field-meta.xml
<CustomField>
    <fullName>BP_Reducers__c</fullName>
    <formula>TEXT ( Builder_Specific_Profile__r.Reducers__c )</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Reducers</label>
    <type>Text</type>
</CustomField>