force-app/main/default/objects/Community_Profile__c/fields/BP_Shoemold__c.field-meta.xml
<CustomField>
    <fullName>BP_Shoemold__c</fullName>
    <formula>TEXT (Builder_Specific_Profile__r.Shoemold__c)</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Shoemold</label>
    <type>Text</type>
</CustomField>