force-app/main/default/objects/Community_Profile__c/fields/BP_Shoemold_Specifics__c.field-meta.xml
<CustomField>
    <fullName>BP_Shoemold_Specifics__c</fullName>
    <formula>Builder_Specific_Profile__r.Shoemold_Specifics__c</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Shoemold Specifics</label>
    <type>Text</type>
</CustomField>