force-app/main/default/objects/Community_Profile__c/fields/BP_T_Molds__c.field-meta.xml
<CustomField>
    <fullName>BP_T_Molds__c</fullName>
    <formula>TEXT (Builder_Specific_Profile__r.T_Molds__c)</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>T-Molds</label>
    <type>Text</type>
</CustomField>