force-app/main/default/objects/Community_Profile__c/fields/BP_T_Molds_Specifics__c.field-meta.xml
<CustomField>
    <fullName>BP_T_Molds_Specifics__c</fullName>
    <formula>Builder_Specific_Profile__r.T_Molds_Specifics__c</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>T-Molds Specifics</label>
    <type>Text</type>
</CustomField>