force-app/main/default/objects/Community_Profile__c/fields/BP_Trim_Included__c.field-meta.xml
<CustomField>
    <fullName>BP_Trim_Included__c</fullName>
    <formula>Builder_Specific_Profile__r.Trim_Included__c</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Trim Included</label>
    <type>Checkbox</type>
</CustomField>