force-app/main/default/objects/Community_Profile__c/fields/BP_Trim_Type__c.field-meta.xml
<CustomField>
    <fullName>BP_Trim_Type__c</fullName>
    <formula>TEXT ( Builder_Specific_Profile__r.Trim_Type__c )</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Trim Type</label>
    <type>Text</type>
</CustomField>