force-app/main/default/objects/Community_Profile__c/fields/BP_Type__c.field-meta.xml
<CustomField>
    <fullName>BP_Type__c</fullName>
    <formula>TEXT( Builder_Specific_Profile__r.Type__c )</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>