force-app/main/default/objects/Community_Profile__c/fields/BP_Underlayment__c.field-meta.xml
<CustomField>
    <fullName>BP_Underlayment__c</fullName>
    <formula>TEXT ( Builder_Specific_Profile__r.Underlayment__c )</formula>
    <inlineHelpText>From Builder Profile</inlineHelpText>
    <label>Underlayment</label>
    <type>Text</type>
</CustomField>