force-app/main/default/objects/Community_Profile__c/fields/BP_Underlayment_Other__c.field-meta.xml
<CustomField>
    <fullName>BP_Underlayment_Other__c</fullName>
    <formula>Builder_Specific_Profile__r.Underlayment_Other__c</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Underlayment (Other)</label>
    <type>Text</type>
</CustomField>