force-app/main/default/objects/Community_Profile__c/fields/BP_VP_to_Tile_Transition__c.field-meta.xml
<CustomField>
    <fullName>BP_VP_to_Tile_Transition__c</fullName>
    <formula>TEXT ( Builder_Specific_Profile__r.VP_to_Tile_Transition__c )</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>VP to Tile Transition</label>
    <type>Text</type>
</CustomField>