force-app/main/default/objects/Community_Profile__c/fields/BP_Wing_Wall_Included__c.field-meta.xml
<CustomField>
    <fullName>BP_Wing_Wall_Included__c</fullName>
    <formula>Builder_Specific_Profile__r.Wing_Wall_Included__c</formula>
    <inlineHelpText>From Builder Profile Line Item</inlineHelpText>
    <label>Wing Wall Included</label>
    <type>Checkbox</type>
</CustomField>