force-app/main/default/objects/Community_Profile__c/fields/Builder_Specific_Profile__c.field-meta.xml
<CustomField>
    <fullName>Builder_Specific_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder Specific Profile</label>
    <referenceTo>Builder_Profile_Line_Items__c</referenceTo>
    <relationshipLabel>Community Profiles</relationshipLabel>
    <relationshipName>Community_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>