force-app/main/default/objects/Community_Profile__c/fields/Butler_s_Pantry_Inlcuded__c.field-meta.xml
<CustomField>
    <fullName>Butler_s_Pantry_Inlcuded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Butler&apos;s Pantry Inlcuded</label>
    <type>Checkbox</type>
</CustomField>