force-app/main/default/objects/Community_Profile__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Community Profile Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Walls</fullName>
                <isActive>false</isActive>
                <label>Walls</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>