force-app/main/default/objects/Community_Profile__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Community Profiles</relationshipLabel>
    <relationshipName>Community_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>