force-app/main/default/objects/Community_Profile__c/fields/Community_Profile_Type__c.field-meta.xml
<CustomField>
    <fullName>Community_Profile_Type__c</fullName>
    <label>Community Profile Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Community_Profile_Sub_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Master Bathroom/Shower</fullName>
            </value>
            <value>
                <fullName>Standard Bathroom/Shower</fullName>
            </value>
            <value>
                <fullName>Pre-Finished Wood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>