force-app/main/default/objects/Community_Profile__c/fields/Corner_Shelf_Included__c.field-meta.xml
<CustomField>
    <fullName>Corner_Shelf_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corner Shelf Included</label>
    <type>Checkbox</type>
</CustomField>