force-app/main/default/objects/Community_Profile__c/fields/Corner_Shelf_Specifics__c.field-meta.xml
<CustomField>
    <fullName>Corner_Shelf_Specifics__c</fullName>
    <label>Corner Shelf Specifics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>