force-app/main/default/objects/Community_Profile__c/fields/Height_at_Dropped_Venthood__c.field-meta.xml
<CustomField>
    <fullName>Height_at_Dropped_Venthood__c</fullName>
    <label>Height at Dropped Venthood</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bottom of Vent</fullName>
            </value>
            <value>
                <fullName>Top of Cabinets</fullName>
            </value>
            <value>
                <fullName>To the Ceiling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>