force-app/main/default/objects/Community_Profile__c/fields/Reducers_Specifics__c.field-meta.xml
<CustomField>
    <fullName>Reducers_Specifics__c</fullName>
    <label>Reducers Specifics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>