force-app/main/default/objects/Community_Profile__c/fields/Shoemold__c.field-meta.xml
<CustomField>
    <fullName>Shoemold__c</fullName>
    <label>Shoemold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Included</fullName>
            </value>
            <value>
                <fullName>Included (specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>