force-app/main/default/objects/Community_Profile__c/fields/Shoemold_Specifics__c.field-meta.xml
<CustomField>
    <fullName>Shoemold_Specifics__c</fullName>
    <label>Shoemold Specifics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>