force-app/main/default/objects/Community_Profile__c/fields/T_Molds_Specifics__c.field-meta.xml
<CustomField>
    <fullName>T_Molds_Specifics__c</fullName>
    <label>T-Molds Specifics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>