force-app/main/default/objects/Community_Profile__c/fields/T_Seams_Allowed__c.field-meta.xml
<CustomField>
    <fullName>T_Seams_Allowed__c</fullName>
    <label>T-Seams Allowed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>