force-app/main/default/objects/Community_Profile__c/fields/Trim_Type__c.field-meta.xml
<CustomField>
    <fullName>Trim_Type__c</fullName>
    <label>Trim Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6x6 Wall Tile</fullName>
            </value>
            <value>
                <fullName>3x6 Wall Tile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>