force-app/main/default/objects/Community_Profile__c/fields/Type_of_Profile__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Profile__c</fullName>
    <label>Type of Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Community Specific Profile</fullName>
            </value>
            <value>
                <fullName>Builder Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>