force-app/main/default/objects/Community_Profile__c/fields/Underlayment_Other__c.field-meta.xml
<CustomField>
    <fullName>Underlayment_Other__c</fullName>
    <label>Underlayment (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>