force-app/main/default/objects/Community_Profile__c/fields/VP_to_Tile_Transition_Specifics__c.field-meta.xml
<CustomField>
    <fullName>VP_to_Tile_Transition_Specifics__c</fullName>
    <label>VP to Tile Transition Specifics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>