force-app/main/default/objects/Community_Profile__c/recordTypes/Builder_Specific_Profile.recordType-meta.xml
<RecordType>
    <fullName>Builder_Specific_Profile</fullName>
    <active>false</active>
    <label>Builder Specific Profile</label>
</RecordType>