force-app/main/default/objects/Community_Profile__c/recordTypes/Builder_Specific_Profile_Record_Type_Carpet.recordType-meta.xml
<RecordType>
    <fullName>Builder_Specific_Profile_Record_Type_Carpet</fullName>
    <active>false</active>
    <label>Builder Specific Profile Record Type (Carpet)</label>
</RecordType>