force-app/main/default/objects/Community_Profile__c/recordTypes/Builder_Specific_Profile_Record_Type_Tile.recordType-meta.xml
<RecordType>
    <fullName>Builder_Specific_Profile_Record_Type_Tile</fullName>
    <active>false</active>
    <label>Builder Specific Profile Record Type (Tile)</label>
</RecordType>