force-app/main/default/objects/Community_Profile__c/recordTypes/Community_Specific_Profile.recordType-meta.xml
<RecordType>
    <fullName>Community_Specific_Profile</fullName>
    <active>false</active>
    <label>Community Specific Profile</label>
</RecordType>