force-app/main/default/objects/Community_Profile__c/recordTypes/Community_Specific_Profile_Record_Type_Carpet.recordType-meta.xml
<RecordType>
    <fullName>Community_Specific_Profile_Record_Type_Carpet</fullName>
    <active>true</active>
    <label>Community Specific Profile Record Type (Carpet)</label>
</RecordType>